@@ -173,6 +173,34 @@ static void MultiplyAdd1_8q1 (dReal *A, dReal *B, dReal *C, int q)
   A[6] += sum;
 }
 
+
+// this assumes the 4th and 8th rows of B are zero.
+
+static void Multiply1_8q1 (dReal *A, dReal *B, dReal *C, int q)
+{
+  int k;
+  dReal sum;
+  dIASSERT (q>0 && A && B && C);
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[k*8] * C[k];
+  A[0] = sum;
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[1+k*8] * C[k];
+  A[1] = sum;
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[2+k*8] * C[k];
+  A[2] = sum;
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[4+k*8] * C[k];
+  A[4] = sum;
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[5+k*8] * C[k];
+  A[5] = sum;
+  sum = 0;
+  for (k=0; k<q; k++) sum += B[6+k*8] * C[k];
+  A[6] = sum;
+}
+
 //****************************************************************************
 // body rotation
 
@@ -264,6 +292,7 @@ static inline void moveAndRotateBody (dxBody *b, dReal h)
 
 //****************************************************************************
 // the slow, but sure way
+// note that this does not do any joint feedback!
 
 // given lists of bodies and joints that form an island, perform a first
 // order timestep.
@@ -924,11 +953,42 @@ void dInternalStepIsland_x2 (dxWorld *world, dxBody * const *body, int nb,
     // compute cforce = J'*lambda
     for (i=0; i<nj; i++) {
       dReal *JJ = J + 2*8*ofs[i];
-      MultiplyAdd1_8q1 (cforce + 8*joint[i]->node[0].body->tag,JJ,
-			lambda+ofs[i], info[i].m);
-      if (joint[i]->node[1].body) {
-	MultiplyAdd1_8q1 (cforce + 8*joint[i]->node[1].body->tag,
-			  JJ + 8*info[i].m, lambda+ofs[i], info[i].m);
+      dxBody* b1 = joint[i]->node[0].body;
+      dxBody* b2 = joint[i]->node[1].body;
+      dJointFeedback *fb = joint[i]->feedback;
+
+      if (fb) {
+	// the user has requested feedback on the amount of force that this
+	// joint is applying to the bodies. we use a slightly slower
+	// computation that splits out the force components and puts them
+	// in the feedback structure.
+	dReal data1[8],data2[8];
+	Multiply1_8q1 (data1, JJ, lambda+ofs[i], info[i].m);
+	dReal *cf1 = cforce + 8*b1->tag;
+	cf1[0] += (fb->f1[0] = data1[0]);
+	cf1[1] += (fb->f1[1] = data1[1]);
+	cf1[2] += (fb->f1[2] = data1[2]);
+	cf1[4] += (fb->t1[0] = data1[4]);
+	cf1[5] += (fb->t1[1] = data1[5]);
+	cf1[6] += (fb->t1[2] = data1[6]);
+	if (b2){
+	  Multiply1_8q1 (data2, JJ + 8*info[i].m, lambda+ofs[i], info[i].m);
+	  dReal *cf2 = cforce + 8*b2->tag;
+	  cf2[0] += (fb->f2[0] = data2[0]);
+	  cf2[1] += (fb->f2[1] = data2[1]);
+	  cf2[2] += (fb->f2[2] = data2[2]);
+	  cf2[4] += (fb->t2[0] = data2[4]);
+	  cf2[5] += (fb->t2[1] = data2[5]);
+	  cf2[6] += (fb->t2[2] = data2[6]);
+	}
+      }
+      else {
+	// no feedback is required, let's compute cforce the faster way
+	MultiplyAdd1_8q1 (cforce + 8*b1->tag,JJ, lambda+ofs[i], info[i].m);
+	if (b2) {
+	  MultiplyAdd1_8q1 (cforce + 8*b2->tag,
+			    JJ + 8*info[i].m, lambda+ofs[i], info[i].m);
+	}
       }
     }
   }
